* d587b8b (HEAD -> master) added license, readme and makefile along with gitignore
* 3b0aa5c did some refactoring