@@ -1,8 +1,8 @@
 CC = gcc
 CFLAGS = -Ofast -Wall -Wextra -g3 -std=gnu18
 LDFLAGS =  -lm
-FILES = pwd.c utils.c
-OBJECTS = pwd.o utils.o
+FILES = main.c utils.c
+OBJECTS = main.o utils.o
 
 pwd: $(OBJECTS)
 	gcc -o $@ $^ $(LDFLAGS) $(CFLAGS)
