@@ -4,5 +4,6 @@
 
 int
 main() {
+    generatePwd();
     return 0;
 }
