@@ -1,5 +1,2 @@
-int*
-getPwdInfo();
-
 void
-generatePwd(int* pwd_info);
+generatePwd();
