@@ -1,2 +1,3 @@
-* d587b8b (HEAD -> master) added license, readme and makefile along with gitignore
+* b31ab2d (HEAD -> master) made makefile for making files
+* d587b8b added license, readme and makefile along with gitignore
 * 3b0aa5c did some refactoring
